Strammer litt inn på sjekken for hvilke inntektsmeldinger som skal benyttes til beregning